# Roze

./: Cargo.toml  Dockerfile
.github/workflows/: rust.yml
locales/: en-US.lang  en-US.toml  en_us.yml  fr.lang  fr.toml  fr_fr.yml
src/: main.rs
src/core/: contexts.rs  database.rs  localization.rs  macros.rs  mod.rs
src/entities/: global_user.rs  guild.rs  guild_user.rs  mod.rs
src/events/: handler.rs  mod.rs
src/modules/: all.rs  base.rs  helper.rs  mod.rs  module_base.rs  modules.rs
src/modules/basic/: mod.rs  ping.rs
src/modules/prettier/: embed.rs  mod.rs  prettier.rs
src/tools/: database.rs  mod.rs
