#* ************************************************************************** *#
##         .-.
##   __   /   \   __
##  (  `'.\   /.'`  )  Roze - Cargo.toml
##   '-._.(;;;)._.-'
##   .-'  ,`"`,  '-.
##  (__.-'/   \'-.__)  By: Rosie (https://github.com/BlankRose)
##      //\   /        Created at: April 27, 2024 [5:29 PM]
##     ||  '-'
#* ************************************************************************** *#

[package]
name = "roze"
version = "0.0.4"
edition = "2021"
authors = ["Rosie <https://github.com/BlankRose>"]
license = "MIT"

[dependencies]
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls", "serde_json"] }
serenity = "0.12.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.199", features = ["derive"] }
log = { version = "0.4.21", features = [] }
indoc = "2.0.5"
lazy_static = "1.4.0"
rust-i18n = "3.0.1"
async-trait = "0.1.80"

[profile.release]
strip = true
